--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Haitham Khedr"
 title_separator          : "-"
 name                     : &name "Haitham Khedr"
 description              : &description "personal Website"
-url                      : https://hkhedr.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://haithamkhedr.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "haithamkhedr.github.io"
+repository               : "haithamkhedr/haithamkhedr.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
