--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   #location         : "Location"
   employer         :
   googlescholar    : 'https://scholar.google.com/citations?user=9YBsa30AAAAJ&hl=en'
-  email            :
+  email            : 'hkhedr@umd.edu'
   uri              :
   bitbucket        :
   codepen          :
