--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,8 +15,8 @@ main:
   - title: "Blog Posts"
     url: /year-archive/
     
-  - title: "CV"
-    url: /files/Hkhedr_CV_UMD.pdf
+#   - title: "CV"
+#     url: /files/Hkhedr_CV_UMD.pdf
     
   # - title: "Guide"
   #   url: /markdown/
