--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
   #location         : "Location"
   employer         :
   googlescholar    : 'https://scholar.google.com/citations?user=9YBsa30AAAAJ&hl=en'
-  email            : 'hkhedr@umd.edu'
+  email            : 'hkhedr@uci.edu'
   uri              :
   bitbucket        :
   codepen          :
