--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   bio              : ""
   #location         : "Location"
   employer         :
-  googlescholar    : 'https://scholar.google.com/citations?user=9YBsa30AAAAJ&hl=en'
+  googlescholar    : 'https://scholar.google.com/citations?user=rqmw-qQAAAAJ&hl=en'
   email            : 'hkhedr@uci.edu'
   uri              :
   bitbucket        :
